# qemu-camp-2026-exper-KeyBor-1

./: .gitignore  Makefile.camp
hw/gpgpu/: .gitignore  DESIGN_NOTES.md  gpgpu.c  gpgpu.h  gpgpu_core.c  gpgpu_core.h  meson.build
hw/gpgpu/arch/riscv/: gpgpu_core.c  gpgpu_core.h
hw/gpgpu/assets/lenet/: README.md  mnist_samples_manifest.md  mnist_samples_q8.h  mnist_test0_q8.h  sunnyhaze_lenet_q8_weights.h
hw/gpgpu/backend/arch/riscv/rvi_interpreter/: gpgpu_core.c  gpgpu_core.h  gpgpu_riscv.h
hw/gpgpu/backend/arch/riscv/vortex_backend/: vortex_simx_wrapper.cpp  vortex_simx_wrapper.h
hw/gpgpu/backend/include/: gpgpu_backend_comm.h
hw/gpgpu/backend/src/: gpgpu_backend_registry.c  gpgpu_backend_rv32.c  gpgpu_backend_vortex.c
hw/gpgpu/baremetal/: Makefile  linker.ld  main.c  qemu_virt_platform.h  thread_add_kernel.c
hw/gpgpu/baremetal/scripts/: start.S
hw/gpgpu/baremetal/src/: main.c  uart_smoke.c
hw/gpgpu/baremetal/tests/include/: smoke.h  test_common.h
hw/gpgpu/baremetal/tests/src/: basic_smoke.c  conv_smoke.c  layout_smoke.c  lenet_smoke.c  linear_smoke.c  matmul_smoke.c  maxpool_smoke.c  mnist_samples.S  qmatmul_smoke.c  relu_smoke.c  smoke.c  stack_smoke.c  test_common.c  thread_add_smoke.c
hw/gpgpu/dev/: Dockerfile  build-image.zsh  shell.zsh
hw/gpgpu/docs/: ABI.md  BAREMETAL_PCI.md  DESIGN_NOTES.md  DEV_ENV.md  FAQ.md  README.md  RUNTIME.md  SIMT_EXECUTION_NOTES.md  STRUCTURE.md  VORTEX_BACKEND_ISSUES.md  vortex-csr-evidence.md
hw/gpgpu/kernels/: im2col_i32_kernel.c  linear_i32_kernel.c  linear_partial_i32_kernel.c  linear_reduce_i32_kernel.c  matmul_partial_i32_kernel.c  matmul_reduce_i32_kernel.c  maxpool_i32_kernel.c  mo_to_nchw_i32_kernel.c  oihw_to_ko_i32_kernel.c  relu_i32_kernel.c  stack_smoke_kernel.c  thread_add_kernel.c
hw/gpgpu/runtime/: gpgpu_pci.c  gpgpu_pci.h  gpgpu_runtime.h
hw/gpgpu/runtime/include/: gpgpu_builtins.h  gpgpu_freestanding.h  gpgpu_nn.h  gpgpu_runtime.h  gpgpu_tensor.h
hw/gpgpu/runtime/src/: gpgpu_runtime.c
hw/gpgpu/tools/: export_mnist_samples.py  export_sunnyhaze_lenet.py
hw/gpio/: Kconfig  g233_gpio.c
hw/misc/: Kconfig  g233_pwm.c  g233_spi.c  g233_wdt.c  meson.build
hw/riscv/: Kconfig  g233.c
include/hw/gpio/: g233_gpio.h
include/hw/misc/: g233_pwm.h  g233_spi.h  g233_wdt.h
tests/qtest/: gpgpu-test.c
(+2 files in other folders)
